--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ dependencies:
 
 test:
   override:
+  - echo n | $ANDROID_HOME/tools/android create avd -n testing -f -t android-18
   - $ANDROID_HOME/tools/emulator -avd testing -no-window -no-boot-anim -no-audio:
       background: true
       parallel: true
